# il2ge

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  enabled_gl_procs  il2ge.nsi  paths.mk
common/: CMakeLists.txt  Makefile  exception_handler.cpp  exception_handler_win32.cpp  forest.cpp  forest.h  image_loader.cpp  imf.cpp  imf.h  map_generator.cpp  map_generator.h  map_loader.cpp  map_loader.h  map_loader_private.h  material.cpp  parameter_file.cpp  version.cpp.in  water_map.cpp
common/effects/: effects.cpp  factory.cpp  factory.h  particle_system.cpp
common/map_loader/: forest.cpp  forest.h  height_table  imf.h  map_generator.cpp  map_loader.cpp  map_loader_private.h  water_map.cpp  water_map.h
core_wrapper/: CMakeLists.txt  Makefile  core_wrapper.cpp  il2_core_wrapper.spec  il2ge.def  main.cpp  wgl_wrapper.cpp
core_wrapper/core/: core.cpp  core_p.h  effects.cpp  gl_objects.cpp  gl_objects.h  il2_state.h  map.cpp  map.h  menu.cpp  menu.h  render_state.cpp  ressource_loader.cpp  ressource_loader.h  scene.cpp  scene.h  swig_interface.cpp  swig_interface_version.cpp  swig_interface_wrapper.cpp
core_wrapper/gl_wrapper/: arb_program.cpp  arbprogram.cpp  framebuffer.cpp  gl_wrapper_main.cpp  gl_wrapper_private.h  state.cpp  state.h  texture_state.cpp  wgl_interface.cpp
core_wrapper/include/: config.h.in  configuration.h  configuration_base.h  core.h  gl_wrapper.h  il2_render_phase.inc  java_classes.h  java_util.h  jni_md.h  keys.h  misc.h  mutex_locker.h  sfs.h  swig_interface.h  wgl_interface.h  wgl_wrapper.h
core_wrapper/include/core/: effects.h  map.h  scene.h
core_wrapper/ini_parser/: INIReader.cpp  INIReader.h  ini.cpp  ini.h
core_wrapper/java_interface/: CMakeLists.txt  interface.cpp  interface_version.cpp  interface_wrapper.cpp
core_wrapper/jni_wrapper/: all_signatures  generate_meta_code.cpp  jni_wrapper.cpp  jni_wrapper.h  meta_class_registrators.h  signatures  wrap_Camera.cpp  wrap_Landscape.cpp  wrap_Render.cpp  wrap_Renders.cpp  wrap_Sun.cpp  wrap_il2.engine.Camera.cpp  wrap_il2.engine.Eff3D.cpp  wrap_il2.engine.GObj.cpp  wrap_il2.engine.Landscape.cpp  wrap_il2.engine.LightPoint.cpp  wrap_il2.engine.Render.cpp  wrap_il2.engine.RenderContext.cpp  wrap_il2.engine.Renders.cpp  wrap_il2.engine.Sun.cpp  wrap_il2.fm.Wind.cpp  wrap_rts.KeyboardDX.cpp  wrap_rts.KeyboardWin.cpp  wrap_rts.Time.cpp
core_wrapper/main/: configuration.cpp  configuration_p.h  core_wrapper.cpp  core_wrapper.h  gl_version_check.cpp  gl_version_check.h  iat.h  main.cpp  wgl_wrapper.cpp
core_wrapper/sfs/: hash.cpp  sfs.cpp  sfs_p.h
core_wrapper/swig/: CMakeLists.txt  GraphicsExtender.i  HotKeys.java  compile.sh  il2ge.i  init_code.i.in  interface.cpp  interface.h  interface_version.cmake  interface_version.cpp  interface_version.cpp.in  interface_version.inc.in  interface_wrapper.cpp  jniclass_code.i.in  module_code.i  module_code.i.in
include/: loader_interface.h
include/il2ge/: core_wrapper.h  effect3d.h  effects.h  exception_handler.h  exception_handler_win32.h  image_loader.h  loader.h  log.h  map_loader.h  material.h  parameter_file.h  ressource_loader.h  version.h  water_map.h
loader/: CMakeLists.txt  Makefile  forwarder.def  forwarder.def.in  forwarder.spec  forwarder.spec.in  il2.sh  il2ge.def  loader.def  resources.rc.in  version.cpp.in
loader/src/: backtrace.cpp  dummy_entry.c  iat.c  loader.h  main.cpp
map_editor/: CMakeLists.txt  main.cpp
map_viewer/: CMakeLists.txt  Makefile  main.cpp  map_loader_dump.cpp  map_loader_dump.h
object_shaders/: ObjectsL0.frag  TexUVTex2D.frag  TexUVTex2D.vert  TreeSprite.frag  TreeSprite.vert  TreeTrunk.frag  TreeTrunk.vert  VAObjectsL0.vert  VAObjectsL0_cockpit.frag  VAObjectsN.vert  main.vert
resources/: dummy.tga
shaders/: generic.frag  generic.program  generic.vert  green.frag  invisible.frag  invisible.program  red.frag  red.program  transparent.frag  transparent.program  transparent.vert
